hubble: create left-panel with phenotypes

--- a/FlaskApp/templates/dashboard.html
+++ b/FlaskApp/templates/dashboard.html
@@ -87,7 +87,7 @@
                 <strong class="blue-text" style="font-size:45px">Hubble</strong>
             </a>
 
-            <div style="display:none" class="list-group list-group-flush">
+            <div style="display:none" class="list-group list-group-flush" id="left-panel">
                 <a href="#" class="list-group-item active waves-effect">
                     <i class="fa fa-pie-chart mr-3"></i>Dashboard
                 </a>
