hubble: display on frontend data returned by backend for computable phenotypes

--- a/FlaskApp/templates/dashboard.html
+++ b/FlaskApp/templates/dashboard.html
@@ -137,6 +137,27 @@
             </div>
             <!-- Heading -->
 
+            <!--Grid row-->
+            <div class="row wow fadeIn" style="display:none" id="main_panel">
+
+                <!--Grid column-->
+                <div class="col-md-12 mb-4">
+
+                    <!--Card-->
+                    <div class="card">
+
+                        <!--Card content-->
+                        <div class="card-body">
+
+                        </div>
+
+                    </div>
+                    <!--/.Card-->
+
+                </div>
+                <!--Grid column-->
+            </div>
+
         </div>
     </main>
     <!--Main layout-->
