allow users to add new phenotype

--- a/FlaskApp/templates/dashboard.html
+++ b/FlaskApp/templates/dashboard.html
@@ -1,3 +1,5 @@
+{% include 'includes/_modal.html' %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -42,7 +44,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link waves-effect" href="https://mdbootstrap.com/getting-started/" target="_blank">Add Phenotype</a>
+                            <a class="nav-link waves-effect" data-toggle="modal" data-target="#addPhenotypeModal">Add Phenotype</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link waves-effect" href="https://mdbootstrap.com/education/bootstrap/" target="_blank">Search Phenotypes</a>
