--- a/FlaskApp/templates/includes/_modal.html
+++ b/FlaskApp/templates/includes/_modal.html
@@ -10,7 +10,7 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <div class="md-form">
-                            <input type="text" class="form-control" name="phenotype" value="{{ request.form.phenotype }}">
+                            <input type="text" class="form-control" name="phenotype" value="{{ request.form.phenotype_title }}" required>
                             <label data-error="wrong" data-success="right" for="phenotype">Phenotype</label>
                         </div>
                     </div>
@@ -91,20 +91,20 @@
                             <div id="collapseTwo2" class="collapse" role="tabpanel" aria-labelledby="headingTwo2" data-parent="#accordionEx">
                                 <div class="card-body">
                                     <div class="md-form mb-2">
-                                        <input type="text" class="form-control" name="body_temp" value="{{ request.form.body_temp }}">
-                                        <label data-error="wrong" data-success="right" for="body_temp">Body Temperature</label>
+                                        <input type="text" class="form-control" name="body_temperature" value="{{ request.form.body_temperature }}">
+                                        <label data-error="wrong" data-success="right" for="body_temperature">Body Temperature</label>
                                     </div>
                                     <div class="md-form mb-2">
                                         <input type="text" class="form-control" name="blood_pressure" value="{{ request.form.blood_pressure }}">
-                                        <label data-error="wrong" data-success="right" for="blood_pressure">Blood Temperature</label>
+                                        <label data-error="wrong" data-success="right" for="blood_pressure">Blood Pressure</label>
                                     </div>
                                     <div class="md-form mb-2">
-                                        <input type="text" class="form-control" name="heart_rate" value="{{ request.form.heart_rate }}">
-                                        <label data-error="wrong" data-success="right" for="heart_rate">Heart Rate</label>
+                                        <input type="text" class="form-control" name="pulse_rate" value="{{ request.form.pulse_rate }}">
+                                        <label data-error="wrong" data-success="right" for="pulse_rate">Pulse Rate</label>
                                     </div>
                                     <div class="md-form mb-2">
-                                        <input type="text" class="form-control" name="breathing_rate" value="{{ request.form.breathing_rate }}">
-                                        <label data-error="wrong" data-success="right" for="breathing_rate">Breathing Rate</label>
+                                        <input type="text" class="form-control" name="respiration_rate" value="{{ request.form.respiration_rate }}">
+                                        <label data-error="wrong" data-success="right" for="respiration_rate">Respiration Rate</label>
                                     </div>
                                 </div>
                             </div>
@@ -119,7 +119,7 @@
                                 <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseThree3"
                                 aria-expanded="false" aria-controls="collapseThree3">
                                 <h5 class="mb-0">
-                                    Lab <i class="fa fa-angle-down rotate-icon"></i>
+                                    Lab Results <i class="fa fa-angle-down rotate-icon"></i>
                                 </h5>
                                 </a>
                             </div>
@@ -128,22 +128,99 @@
                             <div id="collapseThree3" class="collapse" role="tabpanel" aria-labelledby="headingThree3" data-parent="#accordionEx">
                                 <div class="card-body">
                                     <div class="md-form mb-2">
-                                        <input type="text" class="form-control" name="rbc" value="{{ request.form.rbc }}">
-                                        <label data-error="wrong" data-success="right" for="rbc">Red Blood Cells</label>
+                                        <input type="text" class="form-control" name="red_blood_cells" value="{{ request.form.red_blood_cells }}">
+                                        <label data-error="wrong" data-success="right" for="red_blood_cells">Red Blood Cells</label>
                                     </div>
                                     <div class="md-form mb-2">
-                                        <input type="text" class="form-control" name="wbc" value="{{ request.form.wbc }}">
-                                        <label data-error="wrong" data-success="right" for="wbc">White Blood Cells</label>
+                                        <input type="text" class="form-control" name="white_blood_cells" value="{{ request.form.white_blood_cells }}">
+                                        <label data-error="wrong" data-success="right" for="white_blood_cells">White Blood Cells</label>
                                     </div>
                                     <div class="md-form mb-2">
                                         <input type="text" class="form-control" name="hemoglobin" value="{{ request.form.hemoglobin }}">
                                         <label data-error="wrong" data-success="right" for="hemoglobin">Hemoglobin</label>
+                                    </div>
+                                    <div class="md-form mb-2">
+                                        <input type="text" class="form-control" name="hematocrit" value="{{ request.form.hematocrit }}">
+                                        <label data-error="wrong" data-success="right" for="hematocrit">Hematocrit</label>
+                                    </div>
+                                    <div class="md-form mb-2">
+                                        <input type="text" class="form-control" name="cardiac_makers" value="{{ request.form.cardiac_makers }}">
+                                        <label data-error="wrong" data-success="right" for="cardiac_makers">Cardiac Makers</label>
+                                    </div>
+                                    <div class="md-form mb-2">
+                                        <input type="text" class="form-control" name="general_chemistry" value="{{ request.form.general_chemistry }}">
+                                        <label data-error="wrong" data-success="right" for="general_chemistry">General Chemistry</label>
+                                    </div>
+                                    <div class="md-form mb-2">
+                                        <input type="text" class="form-control" name="urine" value="{{ request.form.urine }}">
+                                        <label data-error="wrong" data-success="right" for="urine">Urine</label>
+                                    </div>
+                                    <div class="md-form mb-2">
+                                        <input type="text" class="form-control" name="coagulation" value="{{ request.form.coagulation }}">
+                                        <label data-error="wrong" data-success="right" for="coagulation">Coagulation</label>
+                                    </div>
+                                    <div class="md-form mb-2">
+                                        <input type="text" class="form-control" name="cerebral_spine_fluid" value="{{ request.form.cerebral_spine_fluid }}">
+                                        <label data-error="wrong" data-success="right" for="cerebral_spine_fluid">Cerebral Spine Fluid</label>
+                                    </div>
+                                    <div class="md-form mb-2">
+                                        <input type="text" class="form-control" name="hemodynamic_parameters" value="{{ request.form.hemodynamic_parameters }}">
+                                        <label data-error="wrong" data-success="right" for="hemodynamic_parameters">Hemodynamic Parameters</label>
+                                    </div>
+                                    <div class="md-form mb-2">
+                                        <input type="text" class="form-control" name="neurological_values" value="{{ request.form.neurological_values }}">
+                                        <label data-error="wrong" data-success="right" for="neurological_values">Neurological Values</label>
+                                    </div>
+                                    <div class="md-form mb-2">
+                                        <input type="text" class="form-control" name="arterial_values" value="{{ request.form.arterial_values }}">
+                                        <label data-error="wrong" data-success="right" for="arterial_values">Arterial Values</label>
+                                    </div>
+                                    <div class="md-form mb-2">
+                                        <input type="text" class="form-control" name="venous_values" value="{{ request.form.venous_values }}">
+                                        <label data-error="wrong" data-success="right" for="venous_values">Venous Values</label>
                                     </div>
                                 </div>
                             </div>
                     
                         </div>
                         <!-- Lab card -->
+
+                        <!-- Demographics card -->
+                        <div class="card">
+                            <!-- Card header -->
+                            <div class="card-header" role="tab" id="demographics">
+                                <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseDemographics"
+                                aria-expanded="false" aria-controls="collapseDemographics">
+                                <h5 class="mb-0">
+                                    Demographics <i class="fa fa-angle-down rotate-icon"></i>
+                                </h5>
+                                </a>
+                            </div>
+                    
+                            <!-- Card body -->
+                            <div id="collapseDemographics" class="collapse" role="tabpanel" aria-labelledby="demographics" data-parent="#accordionEx">
+                                <div class="card-body">
+                                    <div class="md-form mb-2">
+                                        <input type="text" class="form-control" name="sex" value="{{ request.form.sex }}">
+                                        <label data-error="wrong" data-success="right" for="sex">Sex</label>
+                                    </div>
+                                    <div class="md-form mb-2">
+                                        <input type="text" class="form-control" name="age" value="{{ request.form.age }}">
+                                        <label data-error="wrong" data-success="right" for="age">Age</label>
+                                    </div>
+                                    <div class="md-form mb-2">
+                                        <input type="text" class="form-control" name="race" value="{{ request.form.race }}">
+                                        <label data-error="wrong" data-success="right" for="race">Race</label>
+                                    </div>
+                                    <div class="md-form mb-2">
+                                        <input type="text" class="form-control" name="ethnicity" value="{{ request.form.ethnicity }}">
+                                        <label data-error="wrong" data-success="right" for="ethnicity">Ethnicity</label>
+                                    </div>
+                                </div>
+                            </div>
+                    
+                        </div>
+                        <!-- Demographics card -->
 
                         <!-- Medication card -->
                         <div class="card">
@@ -161,8 +238,8 @@
                             <div id="collapseFour4" class="collapse" role="tabpanel" aria-labelledby="headingFour4" data-parent="#accordionEx">
                                 <div class="card-body">
                                     <div class="md-form mb-2">
-                                        <input type="text" class="form-control" name="medication" value="{{ request.form.medication }}">
-                                        <label data-error="wrong" data-success="right" for="medication">Medication</label>
+                                        <input type="text" class="form-control" name="medicatiosn" value="{{ request.form.medications }}">
+                                        <label data-error="wrong" data-success="right" for="medications">Medications</label>
                                     </div>
                                 </div>
                             </div>
@@ -204,7 +281,7 @@
                                 <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseSix6"
                                 aria-expanded="false" aria-controls="collapseSix6">
                                 <h5 class="mb-0">
-                                    Reference <i class="fa fa-angle-down rotate-icon"></i>
+                                    Contributor <i class="fa fa-angle-down rotate-icon"></i>
                                 </h5>
                                 </a>
                             </div>
@@ -212,6 +289,18 @@
                             <!-- Card body -->
                             <div id="collapseSix6" class="collapse" role="tabpanel" aria-labelledby="headingSix6" data-parent="#accordionEx">
                                 <div class="card-body">
+                                    <div class="md-form mb-2">
+                                        <input type="text" class="form-control" name="contributor_name" value="{{ request.form.contributor_name }}">
+                                        <label data-error="wrong" data-success="right" for="contributor_name">Contributor's Name</label>
+                                    </div>
+                                    <div class="md-form mb-2">
+                                        <input type="text" class="form-control" name="organization" value="{{ request.form.organization }}">
+                                        <label data-error="wrong" data-success="right" for="organization">Organization</label>
+                                    </div>
+                                    <div class="md-form mb-2">
+                                        <input type="text" class="form-control" name="email" value="{{ request.form.email }}">
+                                        <label data-error="wrong" data-success="right" for="email">Email</label>
+                                    </div>
                                     <div class="md-form mb-2">
                                         <input type="text" class="form-control" name="reference" value="{{ request.form.reference }}">
                                         <label data-error="wrong" data-success="right" for="reference">Reference</label>
