--- a/FlaskApp/templates/includes/_modal.html
+++ b/FlaskApp/templates/includes/_modal.html
@@ -10,8 +10,8 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <div class="md-form">
-                            <input type="text" class="form-control" name="phenotype" value="{{ request.form.phenotype_title }}" required>
-                            <label data-error="wrong" data-success="right" for="phenotype">Phenotype</label>
+                            <input type="text" class="form-control" name="phenotype_title" value="{{ request.form.phenotype_title }}" required>
+                            <label data-error="wrong" data-success="right" for="phenotype_title">Phenotype</label>
                         </div>
                     </div>
                     
@@ -238,7 +238,7 @@
                             <div id="collapseFour4" class="collapse" role="tabpanel" aria-labelledby="headingFour4" data-parent="#accordionEx">
                                 <div class="card-body">
                                     <div class="md-form mb-2">
-                                        <input type="text" class="form-control" name="medicatiosn" value="{{ request.form.medications }}">
+                                        <input type="text" class="form-control" name="medications" value="{{ request.form.medications }}">
                                         <label data-error="wrong" data-success="right" for="medications">Medications</label>
                                     </div>
                                 </div>
