--- a/FlaskApp/templates/dashboard.html
+++ b/FlaskApp/templates/dashboard.html
@@ -143,7 +143,7 @@
             <div class="row wow fadeIn" style="display:none" id="main_panel">
 
                 <!--Grid column-->
-                <div class="col-md-12 mb-4">
+                <div class="col-md-8 mb-4" id="main_panel_col1">
 
                     <!--Card-->
                     <div class="card">
@@ -151,6 +151,51 @@
                         <!--Card content-->
                         <div class="card-body">
 
+                        </div>
+
+                    </div>
+                    <!--/.Card-->
+
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-md-4 mb-4" id="main_panel_col2">
+
+                    <!--Card-->
+                    <div class="card">
+
+                        <!--Card content-->
+                        <div class="card-body">
+<!--                             <div class="progress md-progress">
+                                <div class="progress-bar pheno-color-1" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <ul class="list-group">
+                                <li class="list-group-item d-flex justify-content-between align-items-center">
+                                    <h6>phenotype_name</h6><br \>
+                                    <h6 class="pheno-subtext">as</h6>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-center">
+                                    Queries
+                                    <span class="badge badge-primary badge-pill pheno-color-1">3123</span>
+                                    </li>
+                                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                                    Contributed Phenotypes
+                                    <span class="badge badge-primary badge-pill pheno-color-1">15</span>
+                                    </li>
+                                    
+                            </ul>
+                            <br \>
+
+                            <div class="progress md-progress">
+                                <div class="progress-bar pheno-color-2" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <ul class="list-group">
+                                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                                    <h6>phenotype_name</h6><br \>
+                                    <h6>as</h6>
+                                    <span class="badge badge-primary badge-pill pheno-color-2">14</span>
+                            </ul> -->
                         </div>
 
                     </div>
