--- a/FlaskApp/templates/dashboard.html
+++ b/FlaskApp/templates/dashboard.html
@@ -48,24 +48,23 @@
                                 Phenotype</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link waves-effect" href="https://mdbootstrap.com/education/bootstrap/" target="_blank">Search
+                            <a class="nav-link waves-effect" href="#">Search
                                 Phenotypes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link waves-effect" href="https://mdbootstrap.com/material-design-for-bootstrap/"
-                                target="_blank">About us</a>
+                            <a class="nav-link waves-effect" href="#">About us</a>
                         </li>
                     </ul>
 
                     <!-- Right -->
                     <ul class="navbar-nav nav-flex-icons">
                         <li class="nav-item">
-                            <a href="https://www.facebook.com/mdbootstrap" class="nav-link waves-effect" target="_blank">
+                            <a href="#" class="nav-link waves-effect">
                                 <i class="fa fa-facebook"></i>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://twitter.com/MDBootstrap" class="nav-link waves-effect" target="_blank">
+                            <a href="#" class="nav-link waves-effect">
                                 <i class="fa fa-twitter"></i>
                             </a>
                         </li>
@@ -86,7 +85,7 @@
             </a> -->
 
             <!-- Brand -->
-            <a class="logo-wrapper waves-effect" href="https://mdbootstrap.com/material-design-for-bootstrap/" target="_blank">
+            <a class="logo-wrapper waves-effect" href="#">
                 <strong class="blue-text" style="font-size:45px">Hubble</strong>
             </a>
 
@@ -121,7 +120,7 @@
                 <div class="card-body d-sm-flex justify-content-between">
 
                     <h4 class="mb-2 mb-sm-0 pt-1">
-                        <a href="https://mdbootstrap.com/material-design-for-bootstrap/" target="_blank">Home Page</a>
+                        <a href="#">Home Page</a>
                         <span>/</span>
                         <span>Dashboard</span>
                     </h4>
@@ -323,15 +322,15 @@
     <!--Main layout-->
 
     <!--Footer-->
-    <footer class="page-footer text-center font-small primary-color-dark darken-2 mt-4 wow fadeIn">
+    <!-- <footer class="page-footer text-center font-small primary-color-dark darken-2 mt-4 wow fadeIn"> -->
 
         <!--Copyright-->
-        <div class="footer-copyright py-3">
+        <!-- <div class="footer-copyright py-3">
             © 2018 Copyright Hubble
-        </div>
+        </div> -->
         <!--/.Copyright-->
 
-    </footer>
+    <!-- </footer> -->
     <!--/.Footer-->
 
     <!-- SCRIPTS -->
