--- a/FlaskApp/templates/dashboard.html
+++ b/FlaskApp/templates/dashboard.html
@@ -139,123 +139,129 @@
             </div>
             <!-- Heading -->
 
-            <div class="container" style="display:none" id="phenotype_container">
-                <!--Grid row-->
-                <div class="row wow fadeIn">
+            <div class="row wow fadeIn" style="display:none" id="phenotype_container">
+                <!--Grid column-->
+                <div class="col-md-6 mb-4">
+                    <!--Card Details-->
+                    <div class="card" id="details_card">
+                        <div class="card-header text-center">
+                            Details
+                        </div>
 
-                    <!--Grid column-->
-                    <div class="col-md-6 mb-4">
-
-                        <!--Card Details-->
-                        <div class="card mb-4" id="details_card">
-                            <div class="card-header text-center">
-                                Details
-                            </div>
-
-                            <!--Card content-->
-                            <div class="card-body">
-
-                            </div>
+                        <!--Card content-->
+                        <div class="card-body">
 
                         </div>
-                        <!--/.Card-->
-
-                        <!--Card ICD-->
-                        <div class="card mb-4" id="icd_card">
-
-                            <div class="card-header text-center">
-                                ICD
-                            </div>
-
-                            <!--Card content-->
-                            <div class="card-body">
-
-                            </div>
-
-                        </div>
-                        <!--/.Card-->
-
-                        <!--Card Medications-->
-                        <div class="card mb-4" id="medications_card">
-
-                            <div class="card-header text-center">
-                                Medications
-                            </div>
-
-                            <!--Card content-->
-                            <div class="card-body">
-
-                            </div>
-
-                        </div>
-                        <!--/.Card-->
 
                     </div>
-                    <!--Grid column-->
-
-                    <!--Grid column-->
-                    <div class="col-md-6 mb-4">
-
-                        <!--Card Demographics-->
-                        <div class="card mb-4" id="demographics_card">
-
-                            <!-- Card header -->
-                            <div class="card-header text-center">
-                                Demographics
-                            </div>
-
-                            <!--Card content-->
-                            <div class="card-body">
-
-                            </div>
-
-                        </div>
-                        <!--/.Card-->
-
-                        <!--Card Vital Signs-->
-                        <div class="card mb-4" id="vital_signs_card">
-
-                            <!-- Card header -->
-                            <div class="card-header text-center">
-                                Vital Signs
-                            </div>
-
-                            <!--Card content-->
-                            <div class="card-body">
-
-                            </div>
-
-                        </div>
-                        <!--/.Card-->
-
-                        <!--Card Lab Results-->
-                        <div class="card mb-4" id="lab_results_card">
-
-                            <!-- Card header -->
-                            <div class="card-header text-center">
-                                Lab Results
-                            </div>
-
-                            <!--Card content-->
-                            <div class="card-body">
-
-                            </div>
-
-                        </div>
-                        <!--/.Card-->
-
-                    </div>
-                    <!--Grid column-->
-
+                    <!--/.Card-->
                 </div>
-                <!--Grid row-->
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-md-6 mb-4">
+                    <!--Card ICD-->
+                    <div class="card mb-4" id="icd_card">
+
+                        <div class="card-header text-center">
+                            ICD
+                        </div>
+
+                        <!--Card content-->
+                        <div class="card-body">
+
+                        </div>
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-md-6 mb-4">
+                    <!--Card Medications-->
+                    <div class="card mb-4" id="medications_card">
+
+                        <div class="card-header text-center">
+                            Medications
+                        </div>
+
+                        <!--Card content-->
+                        <div class="card-body">
+
+                        </div>
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-md-6 mb-4">
+                    <!--Card Demographics-->
+                    <div class="card mb-4" id="demographics_card">
+
+                        <!-- Card header -->
+                        <div class="card-header text-center">
+                            Demographics
+                        </div>
+
+                        <!--Card content-->
+                        <div class="card-body">
+
+                        </div>
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-md-6 mb-4">
+                    <!--Card Vital Signs-->
+                    <div class="card mb-4" id="vital_signs_card">
+
+                        <!-- Card header -->
+                        <div class="card-header text-center">
+                            Vital Signs
+                        </div>
+
+                        <!--Card content-->
+                        <div class="card-body">
+
+                        </div>
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-md-6 mb-4">
+                    <!--Card Lab Results-->
+                    <div class="card mb-4" id="lab_results_card">
+
+                        <!-- Card header -->
+                        <div class="card-header text-center">
+                            Lab Results
+                        </div>
+
+                        <!--Card content-->
+                        <div class="card-body">
+
+                        </div>
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+                <!--Grid column-->
             </div>
 
             <!--Grid row-->
-            <div class="row wow fadeIn" style="display:none" id="main_panel">
+            <div class="row wow fadeIn" style="display:none" id="summary_panel">
 
                 <!--Grid column-->
-                <div class="col-md-8 mb-4" id="main_panel_col1">
+                <div class="col-md-8 mb-4" id="summary_panel_col1">
 
                     <!--Card-->
                     <div class="card">
@@ -272,7 +278,7 @@
                 <!--Grid column-->
 
                 <!--Grid column-->
-                <div class="col-md-4 mb-4" id="main_panel_col2">
+                <div class="col-md-4 mb-4" id="summary_panel_col2">
 
                     <!--Card-->
                     <div class="card">
