add summary panel and fix colors

--- a/FlaskApp/templates/dashboard.html
+++ b/FlaskApp/templates/dashboard.html
@@ -141,6 +141,25 @@
 
             <div class="row wow fadeIn" style="display:none" id="phenotype_container">
                 <!--Grid column-->
+                <div class="col-md-12 mb-4">
+                    <!--Card Details-->
+                    <div class="card" id="summary_card">
+                        <div class="card-header text-center">
+                            Summary
+                        </div>
+
+                        <!--Card content-->
+                        <div class="card-body">
+
+                        </div>
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+                <!--Grid column-->
+
+
+                <!--Grid column-->
                 <div class="col-md-6 mb-4">
                     <!--Card Details-->
                     <div class="card" id="details_card">
