create buttons on summary

--- a/FlaskApp/templates/dashboard.html
+++ b/FlaskApp/templates/dashboard.html
@@ -150,14 +150,17 @@
 
                         <!--Card content-->
                         <div class="card-body">
-
                         </div>
 
+                        <div class="card-footer text-center">
+                            <button type="button" class="btn btn-light" id="edit_phenotype">Edit Phenotype</button>
+                            <button type="button" class="btn btn-light" id="submit_to_informatics">Submit to Informatics</button>
+                            <button type="button" class="btn btn-light" id="contact_contributor">Contact Contributor</button>
+                        </div>
                     </div>
                     <!--/.Card-->
                 </div>
                 <!--Grid column-->
-
 
                 <!--Grid column-->
                 <div class="col-md-6 mb-4">
