--- a/FlaskApp/templates/dashboard.html
+++ b/FlaskApp/templates/dashboard.html
@@ -153,7 +153,7 @@
                         </div>
 
                         <div class="card-footer text-center">
-                            <button type="button" class="btn btn-light" id="edit_phenotype">Edit Phenotype</button>
+                            <button type="button" class="btn btn-light" id="fork_phenotype">Fork Phenotype</button>
                             <button type="button" class="btn btn-light" id="submit_to_informatics">Submit to Informatics</button>
                             <button type="button" class="btn btn-light" id="contact_contributor">Contact Contributor</button>
                         </div>
