add chart buttons

--- a/FlaskApp/templates/includes/_modal.html
+++ b/FlaskApp/templates/includes/_modal.html
@@ -347,15 +347,15 @@
     </div>
 </div>
 
-<!-- Central Modal Small -->
 <div class="modal fade" id="chartModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 
-    <!-- Change class .modal-sm to change the size of the modal -->
-    <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-dialog modal-md" role="document">
 
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title w-100" id="myModalLabel">Modal title</h4>
+                <h4 class="modal-title w-100" id="chartModalLabel">
+                    
+                </h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -369,4 +369,3 @@
         </div>
     </div>
 </div>
-<!-- Central Modal Small -->
