--- a/FlaskApp/templates/dashboard.html
+++ b/FlaskApp/templates/dashboard.html
@@ -305,7 +305,7 @@
                         <!--Card content-->
                         <div class="card-body">
                             <div class="s006">
-                                  <form >
+                                  <form>
                                     <fieldset>
                                       <legend>What are you looking for?</legend>
                                       <div class="inner-form">
@@ -315,7 +315,7 @@
                                               <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
                                             </svg>
                                           </button>
-                                          <input id="search" type="text" placeholder="Type your query" value="" aria-label="Search"/>
+                                          <input id="main_search" type="text" placeholder="Type your query" value="" aria-label="Search"/>
                                         </div>
                                       </div>
                                       <h6> Common search:</h6>
