try new approach for enter press

--- a/FlaskApp/templates/dashboard.html
+++ b/FlaskApp/templates/dashboard.html
@@ -305,7 +305,7 @@
                         <!--Card content-->
                         <div class="card-body">
                             <div class="s006">
-                                  <form>
+                                  <form onkeypress="return event.keyCode != 13">
                                     <fieldset>
                                       <legend>What are you looking for?</legend>
                                       <div class="inner-form">
