--- a/FlaskApp/templates/dashboard.html
+++ b/FlaskApp/templates/dashboard.html
@@ -300,7 +300,7 @@
                 <div class="col-md-12 mb-4 align-content-center" id="main_panel_col1">
 
                     <!--Card-->
-                    <div class="card text-center" style="background-image: url({{ url_for('static', filename='img/bg.jpeg') }})">
+                    <div class="card text-center bg-mainpage">
 
                         <!--Card content-->
                         <div class="card-body">
